Finished wndpoint note-items
