# app/Http/Requests/UpdateNoteItemRequest.php
@@ -1,0 +1,37 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateNoteItemRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            "item"      => "required|uuid",
+            "quantity"  => "required|integer|min:1",
+        ];
+    }
+
+    public function attributes(): array
+    {
+        return [
+            "item"      => "item",
+            "quantity"  => "cantidad",
+        ];
+    }
+}
